static/stylesheet.css
/* ... */
/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #404040;
    color: #FF7474;
    text-decoration: none;
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {display:block;z-index: 1;}

#navigator {
    position: absolute;
    display: block;
    /*background-color: rgba(255,255,255,0.75);*/
    overflow-y: auto;
    top: 0;
    width: 300px;
    z-index: 1;
    padding-top: 10px;
    left: -28%;
    /*height: calc(100vw * 0.506 + 70px);*/
}

.dislist {
    font-size: 18px;
    color: black;
    text-decoration: none;
}
.dislist:hover {
    text-decoration: none;
    color: #FF7474;
}
.dislist:active {
    text-decoration: none;
    color: #FF7474;
}
.dislist:visited {
    text-decoration: none;
}
.hh1 {
    font-size: 24px;
    color: black;
    font-family: 'Nunito';
    position: relative;
}
.hh1:hover {
    text-decoration: none;
    color: #FF7474;
}
.hh1:active {
    text-decoration: none;
    color: #FF7474;
}
.hh1:visited {
    text-decoration: none;
}
.subnavdiv {
    display: none;
}
.yearbutton {
    font-size: 20px;
    color: black;
    font-family: 'Nunito';
    position: relative;
    left: 20px;
    text-decoration: none;
}
.yearbutton:hover {
    text-decoration: none;
    color: #FF7474;
}
.yearbutton:active {
    text-decoration: none;
    color: #FF7474;
}
.yearbutton:visited {
    text-decoration: none;
}
.redtxt {
    font-size: 36px;
    color: #FF7474;
    font-family: 'Nunito', sans-serif;
}
.bluetxt {
    font-size: 36px;
    color: #0083C4;
    font-family: 'Nunito', sans-serif;
}
.bluetxtabout {
    font-size: 28px;
    color: #0083C4;
    font-family: 'Nunito', sans-serif;
}

.newsred {
    font-size: 24px;
    color: #FF7474;
    font-family: 'Nunito', sans-serif;
}
.newsblue {
    font-size: 24px;
    color: #0083C4;
    font-family: 'Nunito', sans-serif;
}
.contentbox {
    padding: 20px;
}
.contentbox:hover {
    background-color: #EDDFDF;
}
.icons {
    margin: 0 auto;
    display: block;
    width: 338px;
}
.txtcontent {
    font-size: 18px;
    color: #404040;
    font-family: 'Nunito', sans-serif;
}
.smalltxt {
    font-size: 14px;
    color: #404040;
    font-family: 'Nunito', sans-serif;
}
.posit {
    font-size: 16px;
    color: #0083C4;
    font-family: 'Nunito', sans-serif;
    font-style: italic;
}
.iconlabel {
    display: inline;
    font-size: 14px;
    color: #404040;
}

#back {
    position: absolute;
    width: 100vw;
    left: 0;
    z-index: -1;
}
#fore {
    position: absolute;
    z-index: 1;
    width: 100vw;
}
.frontimg {
    width: 100vw;
    position: absolute;
}
#frontcaption {
    position: fixed;
    z-index: 1;
    top: calc(80vw * 0.506 / 2);
    right: 0%;
    width: 40%;
    background: linear-gradient(to right, rgba(255,255,255,0.15), rgba(255,255,255,0.7));
    color: #404040;
    padding-top: 15px;
    padding-bottom: 15px;
}

.iconbox {
    display: inline-block;
    padding-left: 15px;
    padding-right: 15px;
    text-decoration: none;
}
.iconbox:hover {
    /* background:#FF7474;
    color: #FFFFFF; */
    text-decoration: none;
}
.iconbox:active {
   /* background:#FF7474;
    color: #FFFFFF; */
    text-decoration: none;
}
@media only screen and (min-width: 1000px) {
    .iconbox {
        padding-left: 20px;
        padding-right: 20px;
    }
    .icons {
        width: 500px;
    }
    .iconimg {
        width: 110px;
    }
}
@media only screen and (max-width: 999px) {
    .iconimg {
        width: 80px
    }
}
@media only screen and (max-width: 420px) {
    .cap {
        font-size: 8px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
    }
    .cap2 {
        font-size: 10px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
        font-weight: bolder;
    }
}
@media only screen and (min-width: 421px) and (max-width: 599px) {
    .cap {
        font-size: 12px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
    }
    .cap2 {
        font-size: 14px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
        font-weight: bolder;
    }
}
@media only screen and (min-width: 600px) and (max-width: 940px) {
    .cap {
        font-size: 14px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
    }
    .cap2 {
        font-size: 16px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
        font-weight: bolder;
    }
}
@media only screen and (min-width: 940px) {
    .cap {
        font-size: 24px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
    }
    .cap2 {
        font-size: 30px;
        text-align: center;
        font-family: 'Nunito', sans-serif;
        font-weight: bolder;
    }
}
.iconlabel {
    font-family: 'Nunito', sans-serif;
    font-size: 14;
    font-weight: bold;
}
.narrow {
    max-width: 900px;
    margin: auto 0;
    top: 90%;
    margin: auto;
    background: #FFFFFF;
    z-index: 2;
    display: block;
    position: relative;
}
.height {
    z-index: 1;
    top: calc(66vw * 0.506);
    position: relative;
    background: #FFFFFF;
    overflow: hidden;
    width: 100vw !important;
}

.height1 {
    z-index: 1;
    top: calc(56vw * 0.506);
    position: relative;
    background: #FFFFFF;
    overflow: hidden;
    width: 100vw !important;
}

.foot {
    background-color: #404040;
    color: #FFFFFF;
    font-family: 'Nunito', sans-serif;
    display: block;
    position: relative;
}
#ghi {
    text-align: right;
    padding-right: 20px;
}
#contact {
    padding-left: 3vw;
    margin: auto 0;
    padding-right: 5px;
    width: 1px;
    white-space: nowrap;
}
.socialmedia {
    text-align: center;
    width: 50px;
    padding-top: 5px;
    padding-bottom: 5px;
}
.socialmedia:hover {
    background:#0083C4;
}
.par {
    z-index:1;
}
/* ... */

